# cookiecutter-gotofritz-poetry

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: __init__.py  post_gen_project.py  post_gen_project.sh  pre_gen_project.py
tests/: test_create_template.py
{{cookiecutter.directory_name}}/: README.md  pyproject.toml  requirements.txt
{{cookiecutter.directory_name}}/tests/: test_setup.py
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/src/specimen/: __init__.py
{{cookiecutter.project_name}}/tests/: test_setup.py
