[tool.poetry]
name = "cookiecutter-gotofritz-poetry"
version = "0.1.0"
description = ""
authors = ["gotofritz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^4"
flakeheaven = "^3.0.0"
darglint = "^1.8.1"
flake8-bandit = "^3.0"
flake8-pytest-style = "^1.6.0"
flake8-bugbear = "^22.8.23"
flake8-docstrings = "^1.6.0"
flake8-comprehensions = "^3.10.0"
flake8-isort = "^4.2.0"
flake8-mutable = "^1.2.0"
flake8-simplify = "^0.19.3"
pep8-naming = "^0.13.2"
safety = "^2.1.1"
mypy = "^0.971"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.flakeheaven]
exclude = ["*.md", ".env", ".git", ".gitignore"]
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakeheaven.plugins]
darglint = ["+*"]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*", "-B950"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-docstrings = ["+*", "-D400"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-simplify = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflake = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]
flake8-docstrings = ["-*"]


[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tools.pytest]
norecursedirs = "{{cookiecutter.directory_name}}"